--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -335,7 +335,6 @@
 #svg-stage {
   max-width: 600px;
   overflow: visible;
-  margin-top: 60vh;
 }
 
 .ball {
@@ -344,9 +343,7 @@
 }
 
 .line {
-  fill: none;
-  stroke: #000;
-  stroke-width: 2px;
+  visibility: hidden;
 }
 
 text {
@@ -381,7 +378,6 @@ section {
 }
 
 h1 {
-  font-size: 10vw;
   z-index: 1;
   font-weight: 600;
   text-align: center;
