--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,20 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "Bethany Elingston";
+  src: url("@public/fonts/Bethany Elingston.otf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "AppleGaramond-Bold";
+  src: url("@public/fonts/AppleGaramond-Bold.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
 @layer base {
   /* Remove validation styling from EditableTitle */
   .editable-title-input {
@@ -338,7 +352,7 @@
 }
 
 .ball {
-  fill: #000;
+  fill: #fff2ca;
   visibility: hidden;
 }
 
@@ -347,13 +361,13 @@
 }
 
 text {
-  fill: #000;
+  fill: #fff2ca;
   font-size: 15px;
   visibility: hidden;
 }
 
 .theLine {
-  stroke: #000;
+  stroke: #fff2ca;
 }
 
 /* ************* */
@@ -364,6 +378,13 @@ section {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.line-section {
+  position: relative;
+  /* height: 200vh;
+  display: flex;
+  align-items: center;
+  justify-content: center; */
 }
 .bg {
   position: absolute;
@@ -381,4 +402,9 @@ h1 {
   z-index: 1;
   font-weight: 600;
   text-align: center;
+}
+
+.font-bethany {
+  font-family: "Bethany Elingston";
+  /* font-family: "AppleGaramond-Bold"; */
 }
